Add User to Firebase and success

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
       <h2>Points <span class="points-left"> </span></h2>
       <div class="perk-row strength">
         <h3 name="strength">Strength</h3>
-        <h5 class="strength-number" value="5" #newPlayerStrength> </h5>
+        <h5 class="strength-number"> </h5>
         <div class="button-container">
           <button type="button" name="button"> Add + </button>
           <button type="button" name="button"> Subtract - </button>
@@ -16,7 +16,7 @@
       </div>
       <div class="perk-row intelligence">
         <h3 name="intelligence">intelligence</h3>
-        <h5 class="intelligence-number" value="5" #newPlayerIntelligence> </h5>
+        <h5 class="intelligence-number"> </h5>
         <div class="button-container">
           <button type="button" name="button"> Add + </button>
           <button type="button" name="button"> Subtract - </button>
@@ -24,7 +24,7 @@
       </div>
       <div class="perk-row agility">
         <h3 name="agility">agility</h3>
-        <h5 class="agility-number" value="1" #newPlayerAgility> </h5>
+        <h5 class="agility-number"> </h5>
         <div class="button-container">
           <button type="button" name="button"> Add + </button>
           <button type="button" name="button"> Subtract - </button>
@@ -32,7 +32,7 @@
       </div>
       <div class="perk-row luck">
         <h3 name="luck">luck</h3>
-        <h5 class="luck-number" value="2" #newPlayerLuck> </h5>
+        <h5 class="luck-number"> </h5>
         <div class="button-container">
           <button type="button" name="button"> Add + </button>
           <button type="button" name="button"> Subtract - </button>
@@ -40,7 +40,7 @@
       </div>
       <div class="perk-row endurance">
         <h3 name="endurance">endurance</h3>
-        <h5 class="endurance-number" value="4" #newPlayerEndurance> </h5>
+        <h5 class="endurance-number"> </h5>
         <div class="button-container">
           <button type="button" name="button"> Add + </button>
           <button type="button" name="button"> Subtract - </button>
@@ -48,20 +48,22 @@
       </div>
       <div class="perk-row perception">
         <h3 name="perception">perception</h3>
-        <h5 class="perception-number" value="4" #newPlayerPerception> </h5>
+        <h5 class="perception-number"> </h5>
         <div class="button-container">
           <button type="button" name="button"> Add + </button>
           <button type="button" name="button"> Subtract - </button>
         </div>
       </div>
     </div>
-    <button type="submit" name="button" (click)="createUserName(newPlayerName.value, newPlayerStrength.value, newPlayerIntelligence.value, newPlayerAgility.value, newPlayerPerception.value, newPlayerLuck.value, newPlayerEndurance.value); newPlayerName.value=''; newPlayerStrength.value=''; newPlayerIntelligence.value=''; newPlayerAgility.value=''; newPlayerPerception.value=''; newPlayerLuck.value=''; newPlayerEndurance.value='';" routerLink="/map">Start Game</button>
+    <button type="submit" name="button" (click)="createUserName(playerName.value); playerName.value='';" routerLink="/map">Start Game</button>
   </form>
 </div>
 <button type="button" (click)="UsersIt()" name="button">LogMe</button>
 <div class="existing-users" *ngFor="let user of Users | async">
   <li>{{user.name}}</li>
+  <li>{{user.strength}}</li>
 </div>
 
-
-"submitForm(newTitle.value, newArtist.value, newDescription.value); newTitle.value=''; newArtist.value=''; newDescription.value=''"
+<div>
+  <h3>{{(userToDisplay | async)?.name}}</h3>
+</div>  
