--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,7 +1,7 @@
 <div class="map-container">
   <h2>CHOOSE YOUR NEXT LOCATION</h2>
-  <button id="place-button-one" type="click" name="button"><a routerLink="/map">General Store</a></button>
-  <button id="place-button-two" type="click" name="button"><a routerLink="/map">Wasteland</a></button>
-  <button id="place-button-three" type="click" name="button"><a routerLink="/map">Here</a></button>
-  <button id="place-button-four" type="click" name="button"><a routerLink="/map">There</a></button>
+  <button id="place-button-one" type="click" name="button"><a routerLink="/island-one">General Store</a></button>
+  <button id="place-button-two" type="click" name="button"><a routerLink="/island-two">Wasteland</a></button>
+  <button id="place-button-three" type="click" name="button"><a routerLink="/island-three">Here</a></button>
+  <button id="place-button-four" type="click" name="button"><a routerLink="/island-four">There</a></button>
 </div>
