fix to older firebase

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -80,17 +80,33 @@
   <br>
   <br>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   <ul>
     <li>{{(userToDisplay | async)?.name}}</li>
-    <li>{{(userToDisplay | async)?.$key}}</li>
+    <!-- <li>{{(userToDisplay | async)?.$key}}</li> -->
     <ul>
-      <li>PERKS</li>
+      <!-- <li>PERKS</li>
       <li> Strength: {{(userToDisplay | async)?.perks.strength}}</li>
       <li> Intelligence: {{(userToDisplay | async)?.perks.intelligence}}</li>
       <li> Agility: {{(userToDisplay | async)?.perks.agility}}</li>
       <li> Luck: {{(userToDisplay | async)?.perks.luck}}</li>
       <li> Endurance: {{(userToDisplay | async)?.perks.endurance}}</li>
-      <li> Perception: {{(userToDisplay | async)?.perks.perception}}</li>
+      <li> Perception: {{(userToDisplay | async)?.perks.perception}}</li> -->
     </ul>
     <li> Place in Game: {{(userToDisplay | async)?.place}}</li>
     <li> List of Inventory: {{(userToDisplay | async)?.inventory}}</li>
