--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -5,3 +5,21 @@
   <button id="place-button-three" type="click" name="button"><a routerLink="/island-three">Here</a></button>
   <button id="place-button-four" type="click" name="button"><a routerLink="/island-four">There</a></button>
 </div>
+
+
+
+<!-- <ul>
+  <li>{{(userToDisplay | async)?.name}}</li>
+  <li>{{(userToDisplay | async)?.$key}}</li>
+  <ul>
+    <li>PERKS</li>
+    <li> Strength: {{(userToDisplay | async)?.perks.strength}}</li>
+    <li> Intelligence: {{(userToDisplay | async)?.perks.intelligence}}</li>
+    <li> Agility: {{(userToDisplay | async)?.perks.agility}}</li>
+    <li> Luck: {{(userToDisplay | async)?.perks.luck}}</li>
+    <li> Endurance: {{(userToDisplay | async)?.perks.endurance}}</li>
+    <li> Perception: {{(userToDisplay | async)?.perks.perception}}</li>
+  </ul>
+  <li> Place in Game: {{(userToDisplay | async)?.place}}</li>
+  <li> List of Inventory: {{(userToDisplay | async)?.inventory}}</li>
+</ul> -->
