--- a/src/app/island-one/island-one.component.html
+++ b/src/app/island-one/island-one.component.html
@@ -2,3 +2,4 @@
   <h1>Welcome to the General Store</h1>
   <p>These kids are running from a beast. Quick, get inside and buy some supplies</p>
 </div>
+<button type="button" name="button" (click)="goToMap()">Map</button>
