--- a/src/app/island-three/island-three.component.html
+++ b/src/app/island-three/island-three.component.html
@@ -3,3 +3,4 @@
 
   <p>We believe genetic enhancements happened here so beware. The air may be contain toxins and some bad genes.</p>
 </div>
+<button type="button" name="button" (click)="goToMap()">Map</button>
